--- a/QuestionsByDarshan.html
+++ b/QuestionsByDarshan.html
@@ -128,7 +128,7 @@
       div.innerHTML = `
         <h2 style="margin-bottom: 10px;">Question ${i}</h2>
         <div class="pdf-container" id="pdf-container-${i}">Loading PDF...</div>
-        <a href="pdfs/question${i}.pdf" download>Download PDF</a>
+        <a href="pdfs/question${i}.pdf" target="_blank" download>Download PDF</a>
       `;
       container.appendChild(div);
 
