--- a/QuestionsByDarshan.html
+++ b/QuestionsByDarshan.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>UiPath 100 Questions</title>
+  <title>UiPath Questions By Darshan</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.4.120/pdf.min.js"></script>
   <script>
     pdfjsLib.GlobalWorkerOptions.workerSrc = 'https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.4.120/pdf.worker.min.js';
@@ -97,8 +97,8 @@
 </head>
 <body>
   <header>
-    <h1>UiPath 100 Questions</h1>
-    <p>Explore questions and solutions shared with the RPA community</p>
+    <h1>UiPath Questions by Darshan Sable</h1>
+    <p>Explore questions and solutions shared with the RPA community on LinkedIn which are the part of <a href="https://www.linkedin.com/in/darshan-sable-7a29431b3/"; style="color:white">@DarshanSable</a>'s daily question challenge</p>
   </header>
 
   <main>
@@ -112,7 +112,7 @@
   </main>
 
   <footer>
-    &copy; 2024 Darshan Sable. All rights reserved.
+    &copy; 2025-26 Darshan Sable. All rights reserved.
   </footer>
 
   <script>
