--- a/QuestionsByDarshan.html
+++ b/QuestionsByDarshan.html
@@ -15,13 +15,31 @@
       color: #333;
       margin: 0;
       padding: 0;
+      position: relative;
+      z-index: 1;
     }
+
+    body::before {
+      content: "";
+      position:fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='280' height='150' fill='rgba(0,0,0,0.05)'><text x='0' y='100' transform='rotate(-20)' font-size='25'> Questions By Darshan</text></svg>");
+      background-repeat: repeat;
+      pointer-events: none;
+      z-index: 0;
+    }
+
     header {
       background: linear-gradient(to right, #003f5c, #2f4b7c);
       color: white;
       padding: 25px 20px;
       text-align: center;
       box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+      position: relative;
+      z-index: 2;
     }
     header h1 {
       margin: 0;
@@ -39,6 +57,8 @@
       background-color: #ffffff;
       box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
       border-radius: 12px;
+      position: relative;
+      z-index: 2;
     }
     select {
       width: 100%;
@@ -74,6 +94,21 @@
     button:hover {
       background-color: #003f9e;
     }
+    .download-btn {
+      display: inline-block;
+      margin-top: 12px;
+      padding: 10px 20px;
+      background: linear-gradient(135deg, #0077ff, #0052cc);
+      color: white;
+      text-decoration: none;
+      border-radius: 6px;
+      font-weight: bold;
+      transition: background 0.3s ease;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    }
+    .download-btn:hover {
+      background: linear-gradient(135deg, #0052cc, #003f9e);
+    }
     #question-number {
       font-weight: bold;
       font-size: 16px;
@@ -92,17 +127,23 @@
       color: #555;
       font-size: 14px;
       border-top: 1px solid #ccc;
+      position: relative;
+      z-index: 2;
     }
   </style>
 </head>
 <body>
   <header>
     <h1>UiPath Questions by Darshan Sable</h1>
-    <p>Explore questions and solutions shared with the RPA community on LinkedIn which are the part of <a href="https://www.linkedin.com/in/darshan-sable-7a29431b3/"; style="color:white">@DarshanSable</a>'s daily question challenge</p>
+    <p>Explore questions and solutions shared with the RPA community on LinkedIn which are the part of <a href="https://www.linkedin.com/in/darshan-sable-7a29431b3/" style="color:white">@DarshanSable</a>'s daily question challenge</p>
   </header>
-
   <main>
     <select id="dropdown" onchange="goToQuestion(this.value)"></select>
+    <nav>
+      <button onclick="prevQuestion()">Previous</button>
+      <span id="question-number">Question 1 of 100</span>
+      <button onclick="nextQuestion()">Next</button>
+    </nav>
     <div id="questions-container"></div>
     <nav>
       <button onclick="prevQuestion()">Previous</button>
@@ -110,11 +151,9 @@
       <button onclick="nextQuestion()">Next</button>
     </nav>
   </main>
-
   <footer>
     &copy; 2025-26 Darshan Sable. All rights reserved.
   </footer>
-
   <script>
     const totalQuestions = 100;
     let current = 1;
@@ -127,8 +166,9 @@
       div.id = 'question-' + i;
       div.innerHTML = `
         <h2 style="margin-bottom: 10px;">Question ${i}</h2>
+	<a class="download-btn" href="pdfs/question${i}.pdf" target="_blank" download>📥 Download PDF</a>
         <div class="pdf-container" id="pdf-container-${i}">Loading PDF...</div>
-        <a href="pdfs/question${i}.pdf" target="_blank" download>Download PDF</a>
+        
       `;
       container.appendChild(div);
 
