--- a/QuestionsByDarshan.html
+++ b/QuestionsByDarshan.html
@@ -26,7 +26,7 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='280' height='150' fill='rgba(0,0,0,0.05)'><text x='0' y='100' transform='rotate(-20)' font-size='25'> Questions By Darshan</text></svg>");
+      background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='280' height='150' fill='rgba(0,0,0,0.05)'><text x='0' y='100' transform='rotate(-20)' font-size='20'> Questions By Darshan Sable</text></svg>");
       background-repeat: repeat;
       pointer-events: none;
       z-index: 0;
