--- a/QuestionsByDarshan.html
+++ b/QuestionsByDarshan.html
@@ -174,6 +174,17 @@
         <li>🚀 Ideal for RPA learners & pros</li>
        
       </ul>
+ 	<h3>💬 Feedback</h3>
+      <form id="feedback-form">
+        <input type="text" id="user" placeholder="Your Name / LinkedIn *" required style="width:100%; padding:8px; margin-bottom:10px;">
+        <textarea id="message" placeholder="Your feedback *" required style="width:100%; padding:8px; height:80px;"></textarea>
+        <button type="submit" style="margin-top:10px; width:100%;">Submit Feedback</button>
+      </form>
+      <div id="feedback-list">
+        <h4>📝 Previous Feedbacks</h4>
+        <ul id="feedback-items" style="list-style:none; padding:0; font-size:14px;"></ul>
+      </div>
+
     </aside>
 
     <main>
@@ -263,8 +274,35 @@
       current = parseInt(index);
       showQuestion(current);
     }
+// Feedback logic using localStorage
+    const feedbackForm = document.getElementById("feedback-form");
+    const feedbackItems = document.getElementById("feedback-items");
 
+    function loadFeedbacks() {
+      const feedbacks = JSON.parse(localStorage.getItem("feedbacks") || "[]");
+      feedbackItems.innerHTML = "";
+      feedbacks.forEach(fb => {
+        const li = document.createElement("li");
+        li.style.marginBottom = "10px";
+        li.innerHTML = `<strong>${fb.user}</strong><br/>${fb.message}`;
+        feedbackItems.appendChild(li);
+      });
+    }
+
+    feedbackForm.addEventListener("submit", function(e) {
+      e.preventDefault();
+      const user = document.getElementById("user").value.trim();
+      const message = document.getElementById("message").value.trim();
+      if (!user || !message) return;
+      const feedbacks = JSON.parse(localStorage.getItem("feedbacks") || "[]");
+      feedbacks.unshift({ user, message });
+      localStorage.setItem("feedbacks", JSON.stringify(feedbacks));
+      document.getElementById("user").value = "";
+      document.getElementById("message").value = "";
+      loadFeedbacks();
+});
     showQuestion(current);
+ loadFeedbacks();
   </script>
 </body>
 </html>
