--- a/QuestionsByDarshan.html
+++ b/QuestionsByDarshan.html
@@ -169,10 +169,29 @@
     <aside class="summary">
       <h3>📌 Summary</h3>
       <ul>
-        <li>📄 Each Question with downloadable PDF</li>
-        <li>⏮️ Navigate with buttons or dropdown</li>
-        <li>🚀 Ideal for RPA learners & pros</li>
-       
+        <li>1 - What is Uipath?</li>
+        <li>2-3 Types of Automation</li>
+        <li>4-9 Asset</li>
+	<li>10-20 Queues</li>        
+	<li>21-28 Process & jobs</li>        
+	<li>23 Healing Agent</li>        
+	<li>24 High Density Robots</li>        
+	<li>24 High Density Robots</li>        
+	<li>29-35 Triggers</li>        
+	<li>36-37 Logging</li>        
+	<li>38-40 Cloud Robots</li>        
+	<li>41 Orchestrator Folders</li>        
+	<li>42-27 Storage Buckets</li>        
+	<li>48-50 Machine Template</li>        
+	<li>51-53 Robot Services</li>        
+	<li>54-57 Best Practices</li>        
+	<li>58-78 UiPath Studio</li>        
+	<li>79 Shortcuts</li>        
+	<li>80-81 Studio Login and Orchestrator connection</li>        
+	<li>83-87 Project Template and types</li>        
+	<li>88-97 Types of Workflow</li>      
+	<li>98-99 Debugging</li>        
+	<li>100-?? RE-Framework</li>        
       </ul>
     </aside>
 
