--- a/QuestionsByDarshan.html
+++ b/QuestionsByDarshan.html
@@ -191,7 +191,9 @@
 	<li>83-87 Project Template and types</li>        
 	<li>88-97 Types of Workflow</li>      
 	<li>98-99 Debugging</li>        
-	<li>100-?? RE-Framework</li>        
+	<li>100-124 RE-Framework</li> 
+	<li>125-129 Dependencies</li>
+	<li>130-??? Excel & Workbook Activities</li>       
       </ul>
     </aside>
 
